# employee_catalog

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.env/: postgres.env
.github/workflows/: build.yml
modules/models/: employee.py
modules/pgdriver/: config.py  data_generation.py  operations.py  pgdriver.py
modules/utils/: utils.py
schema/: initdb.sql
