[project]
name = "edb-utility"
version = "0.1.0"
description = "Employee Database Management Utility"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "selvnv"}
]

dependencies = [
    "click>=8.3.1",
    "mimesis>=19.1.0",
    "numpy>=2.4.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
]

[project.scripts]
edb = "modules.pgdriver.operations:edb"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["modules"]
